--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="footer_info">
         <div class="addres">
           <div class="circle">
-            <i class="fa-solid fa-phone fa-2xl" style="color: #30b7d9;"></i>
+            <i class="fa-solid fa-phone " style="color: #30b7d9;"></i>
           </div>
           <div class="contact">
             <p class="geo">ტელეფონი</p>
@@ -76,7 +76,7 @@
         </div>
         <div class="addres">
           <div class="circle">
-            <i class="fa-solid fa-mobile-screen-button fa-2xl" style="color: #30b7d9;"></i>
+            <i class="fa-solid fa-mobile-screen-button " style="color: #30b7d9;"></i>
           </div>
           <div class="contact">
             <p class="geo">მობილური</p>
@@ -85,7 +85,7 @@
         </div>
         <div class="addres">
           <div class="circle">
-            <i class="fa-solid fa-location-dot fa-2xl" style="color: #30b7d9;"></i>
+            <i class="fa-solid fa-location-dot " style="color: #30b7d9;"></i>
           </div>
           <div class="contact">
             <p class="geo">მისამართი</p>
