fixed whole page

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" 
-    href="/node_modules/arial-geo/css/arial-geo.min.css">
+    <link
+      rel="stylesheet"
+      href="/node_modules/arial-geo/css/arial-geo.min.css"
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
@@ -26,13 +28,16 @@
   <body>
     <header>
       <div class="header-container">
-        <div class="name-div">
-          <img class="house-icon" src="./images/home.png" alt="house" />
-          <i class="fa-solid fa-heart heart"></i>
+        <div class="home_icon">
+          <div class="name-div">
+            <img class="house-icon" src="./images/home.png" alt="house" />
+            <i class="fa-solid fa-heart heart"></i>
 
-          <p class="name irubaqidze">სახლური</p>
+            <p class="name irubaqidze">სახლური</p>
+          </div>
+          
+         <i class="Menu fa-solid fa-bars fa-xl" style="color: #d279c2;"></i>
         </div>
-
         <nav>
           <ul>
             <li><a class="dedaena active" href="index.html">მთავარი</a></li>
@@ -61,13 +66,13 @@
     </main>
     <footer>
       <div class="information-div">
-        <i class="fa-solid fa-circle-info fa-2xl" style="color: #dd8dce;"></i>
+        <i class="fa-solid fa-circle-info fa-2xl" style="color: #dd8dce"></i>
         <p class="information dedaena">საკონტაქტო ინფორმაცია</p>
       </div>
       <div class="footer_info">
         <div class="addres">
           <div class="circle">
-            <i class="fa-solid fa-phone " style="color: #30b7d9;"></i>
+            <i class="fa-solid fa-phone fa-2xl" style="color: #30b7d9"></i>
           </div>
           <div class="contact">
             <p class="geo">ტელეფონი</p>
@@ -76,7 +81,10 @@
         </div>
         <div class="addres">
           <div class="circle">
-            <i class="fa-solid fa-mobile-screen-button " style="color: #30b7d9;"></i>
+            <i
+              class="fa-solid fa-mobile-screen-button fa-2xl"
+              style="color: #30b7d9"
+            ></i>
           </div>
           <div class="contact">
             <p class="geo">მობილური</p>
@@ -85,14 +93,21 @@
         </div>
         <div class="addres">
           <div class="circle">
-            <i class="fa-solid fa-location-dot " style="color: #30b7d9;"></i>
+            <i
+              class="fa-solid fa-location-dot fa-2xl"
+              style="color: #30b7d9"
+            ></i>
           </div>
           <div class="contact">
             <p class="geo">მისამართი</p>
-            <a href="https://www.google.com/maps/place/38+Avtomshenebeli+St,+Kutaisi/@42.266891,42.6764864,19z/data=!3m1!4b1!4m5!3m4!1s0x405c8cbf737699ef:0xc75d124076c5784e!8m2!3d42.26689!4d42.6771301">ავტომშენებლის,38</a>
+            <a
+              href="https://www.google.com/maps/place/38+Avtomshenebeli+St,+Kutaisi/@42.266891,42.6764864,19z/data=!3m1!4b1!4m5!3m4!1s0x405c8cbf737699ef:0xc75d124076c5784e!8m2!3d42.26689!4d42.6771301"
+              >ავტომშენებლის,38</a
+            >
           </div>
         </div>
       </div>
     </footer>
+    <script src="./script.js"></script>
   </body>
 </html>
