--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <ul>
             <li><a class="dedaena active" href="index.html">მთავარი</a></li>
             <li><a class="dedaena li_design" href="##">საკონდიტრო</a></li>
-            <li><a class="dedaena li_design" href="##">ცომეული</a></li>
+            <li><a class="dedaena li_design" href="second.html">ცომეული</a></li>
             <li><a class="dedaena li_design" href="##">მზა პროდუქტი</a></li>
           </ul>
         </nav>
