--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="footer_info">
         <div class="addres">
           <div class="circle">
-            <i class="fa-solid fa-phone fa-2xl" style="color: #30b7d9"></i>
+            <i class="fa-solid fa-phone fa-lg" style="color: #30b7d9"></i>
           </div>
           <div class="contact">
             <p class="geo">ტელეფონი</p>
@@ -82,7 +82,7 @@
         <div class="addres">
           <div class="circle">
             <i
-              class="fa-solid fa-mobile-screen-button fa-2xl"
+              class="fa-solid fa-mobile-screen-button fa-lg"
               style="color: #30b7d9"
             ></i>
           </div>
@@ -94,7 +94,7 @@
         <div class="addres">
           <div class="circle">
             <i
-              class="fa-solid fa-location-dot fa-2xl"
+              class="fa-solid fa-location-dot fa-lg"
               style="color: #30b7d9"
             ></i>
           </div>
