--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="node_modules/arial-geo/css/arial-geo.min.css"
+      href="./node_modules/arial-geo/css/arial-geo.min.css"
     />
     <link
       rel="stylesheet"
@@ -15,122 +15,151 @@
     />
     <link
       rel="stylesheet"
-      href="node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
+      href="./node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
     />
     <link
       rel="stylesheet"
-      href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
+      href="./node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
     />
-    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
+    <link rel="stylesheet" href="./node_modules/alk-life/css/alk-life.min.css" />
     <link rel="stylesheet" href="styles2.css" />
     <title>სახლური/ცომეული</title>
   </head>
-<body>
+  <body>
     <header>
-        <div class="home_icon">
-            <div class="name-div">
-              <img class="house-icon" src="./images/home.png" alt="house" />
-              <i class="fa-solid fa-heart heart"></i>
-  
-              <p class="name irubaqidze">სახლური</p>
-            </div>
+      <div class="home_icon">
+        <div class="name-div">
+          <img class="house-icon" src="./images/home.png" alt="house" />
+          <i class="fa-solid fa-heart heart"></i>
+          <p class="name irubaqidze">სახლური</p>
+        </div>
+        <i class="Menu fa-solid fa-bars fa-xl" style="color: #d279c2;"></i>
+      </div>
+      <nav>
+        <ul>
+          <li><a class="dedaena " href="index.html">მთავარი</a></li>
+          <li><a class="dedaena li_design" href="##">საკონდიტრო</a></li>
+          <li><a class="dedaena li_design active" href="second.html">ცომეული</a></li>
+          <li><a class="dedaena li_design" href="##">მზა პროდუქტი</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <div class="container1">
-            <div class="child">
-                <img class="img
-                " src="./ცომეული/06c5f0bb6b6ae072a27048ec5416b981.jpg" alt="ხაჭაპური">
-                <div class="title-price">
-                    <h2 class="dedaena title">ხაჭაპური</h2>
-                    <p class="price">4.00ლ</p>
-                </div>
-            </div>
-            <div class="child">
-                <img class="img
-                " src="./ცომეული/337530919_2373005786210056_2214351220954184061_n.jpg" alt="სოკოს ღვეზელი">
-                <div class="title-price">
-                    <h2 class="dedaena title">სოკოს ღვეზელი</h2>
-                    <p class="price">2.00ლ</p>
-                </div>
-            </div>
-            <div class="child">
-                <img class="img
-                " src="./ცომეული/4cd0533a6c1daae88878b13b2461c49c.jpg" alt="ხორციანი">
-                <div class="title-price">
-                    <h2 class="dedaena title">ხორციანი ღვეზელი</h2>
-                    <p class="price">2.00ლ</p>
-                </div>
-            </div>
-            <div class="child">
-                <img class="img
-                " src="./ცომეული/a785940114e6b7047bd5700b3b9a2d4b.jpg" alt="კუბდარი">
-                <div class="title-price">
-                    <h2 class="dedaena title">კუბდარი</h2>
-                    <p class="price">4.00ლ</p>
-                </div>
-
-            </div>
-            <div class="child">
-                <img class="img
-                " src="./ცომეული/b5b23287a249b5d1bc60e343d7ba3a5a.jpg" alt="ლობიანი">
-                <div class="title-price">
-                    <h2 class="dedaena title">ლობიანი</h2>
-                    <p class="price">1.50ლ</p>
-                </div>
-            </div>
-            <div class="child">
-                <img class="img
-                " src="./ცომეული/კარტოფილიანი.jpg" alt="კარტოფილიანი">
-                <div class="title-price">
-                    <h2 class="dedaena title">კარტოფილიანი ღვეზელი</h2>
-                    <p class="price">1.50ლ</p>
-                </div>
-            </div>
+      <div class="container1">
+        <div class="child">
+          <img
+            class="img"
+            src="./ცომეული/06c5f0bb6b6ae072a27048ec5416b981.jpg"
+            alt="ხაჭაპური"
+          />
+          <div class="title_price">
+            <h2 class="dedaena title">ხაჭაპური</h2>
+            <p class="price">4.00ლ</p>
+          </div>
         </div>
+        <div class="child">
+          <img
+            class="img"
+            src="./ცომეული/337530919_2373005786210056_2214351220954184061_n.jpg"
+            alt="სოკოს ღვეზელი"
+          />
+          <div class="title_price">
+            <h2 class="dedaena title">სოკოს ღვეზელი</h2>
+            <p class="price">2.00ლ</p>
+          </div>
+        </div>
+        <div class="child">
+          <img
+            class="img"
+            src="./ცომეული/4cd0533a6c1daae88878b13b2461c49c.jpg"
+            alt="ხორციანი"
+          />
+          <div class="title_price">
+            <h2 class="dedaena title">ხორციანი ღვეზელი</h2>
+            <p class="price">2.00ლ</p>
+          </div>
+        </div>
+        <div class="child">
+          <img
+            class="img"
+            src="./ცომეული/a785940114e6b7047bd5700b3b9a2d4b.jpg"
+            alt="კუბდარი"
+          />
+          <div class="title_price">
+            <h2 class="dedaena title">კუბდარი</h2>
+            <p class="price">4.00ლ</p>
+          </div>
+        </div>
+        <div class="child">
+          <img
+            class="img"
+            src="./ცომეული/b5b23287a249b5d1bc60e343d7ba3a5a.jpg"
+            alt="ლობიანი"
+          />
+          <div class="title_price">
+            <h2 class="dedaena title">ლობიანი</h2>
+            <p class="price">1.50ლ</p>
+          </div>
+        </div>
+        <div class="child">
+          <img
+            class="img"
+            src="./ცომეული/კარტოფილიანი.jpg"
+            alt="კარტოფილიანი"
+          />
+          <div class="title_price">
+            <h2 class="dedaena title">კარტოფილიანი ღვეზელი</h2>
+            <p class="price">1.50ლ</p>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
-        <div class="information-div">
-          <i class="fa-solid fa-circle-info fa-2xl" style="color: rgb(243, 206, 137)"></i>
-          <p class="information dedaena">საკონტაქტო ინფორმაცია</p>
-        </div>
-        <div class="footer_info">
-          <div class="addres">
-            <div class="circle">
-              <i class="fa-solid fa-phone fa-lg" style="color: #30b7d9"></i>
-            </div>
-            <div class="contact">
-              <p class="geo">ტელეფონი</p>
-              <a href="tel:431296466">0431396466</a>
-            </div>
+      <div class="information-div">
+        <i
+          class="fa-solid fa-circle-info fa-2xl"
+          style="color: rgb(243, 206, 137)"
+        ></i>
+        <p class="information dedaena">საკონტაქტო ინფორმაცია</p>
+      </div>
+      <div class="footer_info">
+        <div class="addres">
+          <div class="circle">
+            <i class="fa-solid fa-phone fa-lg" style="color: #30b7d9"></i>
           </div>
-          <div class="addres">
-            <div class="circle">
-              <i
-                class="fa-solid fa-mobile-screen-button fa-lg"
-                style="color: #30b7d9"
-              ></i>
-            </div>
-            <div class="contact">
-              <p class="geo">მობილური</p>
-              <a href="tel:+995551486969">+995551486969</a>
-            </div>
-          </div>
-          <div class="addres">
-            <div class="circle">
-              <i
-                class="fa-solid fa-location-dot fa-lg"
-                style="color: #30b7d9"
-              ></i>
-            </div>
-            <div class="contact">
-              <p class="geo">მისამართი</p>
-              <a
-                href="https://www.google.com/maps/place/38+Avtomshenebeli+St,+Kutaisi/@42.266891,42.6764864,19z/data=!3m1!4b1!4m5!3m4!1s0x405c8cbf737699ef:0xc75d124076c5784e!8m2!3d42.26689!4d42.6771301"
-                >ავტომშენებლის,38</a
-              >
-            </div>
+          <div class="contact">
+            <p class="geo">ტელეფონი</p>
+            <a href="tel:431296466">0431396466</a>
           </div>
         </div>
-      </footer>
-</body>
-</html>
+        <div class="addres">
+          <div class="circle">
+            <i
+              class="fa-solid fa-mobile-screen-button fa-lg"
+              style="color: #30b7d9"
+            ></i>
+          </div>
+          <div class="contact">
+            <p class="geo">მობილური</p>
+            <a href="tel:+995551486969">+995551486969</a>
+          </div>
+        </div>
+        <div class="addres">
+          <div class="circle">
+            <i
+              class="fa-solid fa-location-dot fa-lg"
+              style="color: #30b7d9"
+            ></i>
+          </div>
+          <div class="contact">
+            <p class="geo">მისამართი</p>
+            <a
+              href="https://www.google.com/maps/place/38+Avtomshenebeli+St,+Kutaisi/@42.266891,42.6764864,19z/data=!3m1!4b1!4m5!3m4!1s0x405c8cbf737699ef:0xc75d124076c5784e!8m2!3d42.26689!4d42.6771301"
+              >ავტომშენებლის,38</a
+            >
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script src="./script2.js"></script>
+  </body>
