--- a/second.html
+++ b/second.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
-      href="./node_modules/arial-geo/css/arial-geo.min.css"
+      href="../node_modules/arial-geo/css/arial-geo.min.css"
     />
     <link
       rel="stylesheet"
@@ -15,13 +15,13 @@
     />
     <link
       rel="stylesheet"
-      href="./node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
+      href="../node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
     />
     <link
       rel="stylesheet"
-      href="./node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
+      href="../node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
     />
-    <link rel="stylesheet" href="./node_modules/alk-life/css/alk-life.min.css" />
+    <link rel="stylesheet" href="../node_modules/alk-life/css/alk-life.min.css" />
     <link rel="stylesheet" href="styles2.css" />
     <title>სახლური/ცომეული</title>
   </head>
@@ -37,9 +37,9 @@
       </div>
       <nav>
         <ul>
-          <li><a class="dedaena " href="index.html">მთავარი</a></li>
+          <li><a class="dedaena li_design " href="index.html">მთავარი</a></li>
           <li><a class="dedaena li_design" href="##">საკონდიტრო</a></li>
-          <li><a class="dedaena li_design active" href="second.html">ცომეული</a></li>
+          <li><a class="dedaena active" href="second.html">ცომეული</a></li>
           <li><a class="dedaena li_design" href="##">მზა პროდუქტი</a></li>
         </ul>
       </nav>
