--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <li><a class="dedaena active" href="index.html">მთავარი</a></li>
             <li><a class="dedaena li_design" href="##">საკონდიტრო</a></li>
             <li><a class="dedaena li_design" href="second.html">ცომეული</a></li>
-            <li><a class="dedaena li_design" href="##">მზა პროდუქტი</a></li>
+            <li><a class="dedaena li_design" href="third.html">მზა პროდუქტი</a></li>
           </ul>
         </nav>
       </div>
