add: another page

--- a/third.html
+++ b/third.html
@@ -23,7 +23,7 @@
     />
     <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
     <link rel="stylesheet" href="styles3.css" />
-    <title>სახლური/ცომეული</title>
+    <title>სახლური/მზაპროდუქტები</title>
   </head>
   <body>
     <header>
@@ -37,8 +37,8 @@
       </div>
       <nav>
         <ul>
-          <li><a class="dedaena li_design " href="index.html">მთავარი</a></li>
-          <li><a class="dedaena li_design" href="##">საკონდიტრო</a></li>
+          <li><a class="dedaena li_design " href="first.html">მთავარი</a></li>
+          <li><a class="dedaena li_design" href="fourth.html">საკონდიტრო</a></li>
           <li><a class="dedaena li_design" href="second.html">ცომეული</a></li>
           <li><a class="dedaena active" href="third.html">მზა პროდუქტი</a></li>
         </ul>
