--- a/second.html
+++ b/second.html
@@ -37,8 +37,8 @@
       </div>
       <nav>
         <ul>
-          <li><a class="dedaena li_design " href="index.html">მთავარი</a></li>
-          <li><a class="dedaena li_design" href="##">საკონდიტრო</a></li>
+          <li><a class="dedaena li_design " href="first.html">მთავარი</a></li>
+          <li><a class="dedaena li_design" href="fourth.html">საკონდიტრო</a></li>
           <li><a class="dedaena active" href="second.html">ცომეული</a></li>
           <li><a class="dedaena li_design" href="third.html">მზა პროდუქტი</a></li>
         </ul>
