--- a/index.html
+++ b/index.html
@@ -1,32 +1,39 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <link rel="stylesheet" href="reset.css" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="სახლური საცხობი">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Tamari Popkhadze">
     <title>სახლური/რეგისტრაცია</title>
-    <link rel="stylesheet" type="text/css" href="./registrationStyle.css" />
+    <link rel="stylesheet" type="text/css" href="./registrationStyle.css" >
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
-    />
-    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
+    >
+    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" >
   </head>
   <body>
     <header>
       <div class="header-container">
         <div class="home_icon">
           <div class="name-div">
-            <img class="house-icon" src="./images/home.png" alt="house" />
+            <img class="house-icon" src="./images/home.png" alt="house" >
             <i class="fa-solid fa-heart heart"></i>
 
             <p class="name irubaqidze">სახლური</p>
