--- a/third.html
+++ b/third.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="reset.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <link rel="stylesheet" href="reset.css" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="სახლური საცხობი">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Tamari Popkhadze">
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
-    />
-    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
+    >
+    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" >
     <link rel="stylesheet" href="styles3.css" />
+    <link rel = "icon" href = "images/icon.png" 
+            type = "image/house-icon">
     <title>სახლური/მზაპროდუქტები</title>
   </head>
   <body>
@@ -51,7 +56,7 @@
             class="img"
             src="./მზაპროდუქტები/2ebb97faf78d433c19ec2ff5481e7d4e.jpg"
             alt="ისპანახი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">ისპანახის სალათი</h2>
             <p class="price">4.00ლ</p>
@@ -62,7 +67,7 @@
             class="img"
             src="./მზაპროდუქტები/axali_kartofili.jpg"
             alt="კარტოფილი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">ახალი კარტოფილი</h2>
             <p class="price">2.00ლ</p>
@@ -73,7 +78,7 @@
             class="img"
             src="./მზაპროდუქტები/ced161dac8753403eb3c202ea77f053b.jpg"
             alt="ბადრიჯანი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">ნიგვზიანი ბადრიჯანი</h2>
             <p class="price">2.00ლ</p>
@@ -84,7 +89,7 @@
             class="img"
             src="./მზაპროდუქტები/cfe658ddc3dc16117a7502386f19f2e1.jpg"
             alt="კუჭმაჭი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">კუჭმაჭი</h2>
             <p class="price">4.00ლ</p>
@@ -95,7 +100,7 @@
             class="img"
             src="./მზაპროდუქტები/georgian-salad.jpg"
             alt="ფხალი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">წითელი ფხალი</h2>
             <p class="price">1.50ლ</p>
@@ -106,7 +111,7 @@
             class="img"
             src="./მზაპროდუქტები/kuchmachi.jpg"
             alt="ქათამი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">ქათამი ქონდარში</h2>
             <p class="price">1.50ლ</p>
@@ -117,7 +122,7 @@
               class="img"
               src="./მზაპროდუქტები/olivie.jpg"
               alt="ოლივიე"
-            />
+            >
             <div class="title_price">
               <h2 class="dedaena title">ოლივიე</h2>
               <p class="price">1.50ლ</p>
@@ -128,7 +133,7 @@
               class="img"
               src="./მზაპროდუქტები/qatmis-salata-kitrit.jpg"
               alt="სალათი"
-            />
+            >
             <div class="title_price">
               <h2 class="dedaena title">ქათმის სალათი</h2>
               <p class="price">1.50ლ</p>
@@ -139,7 +144,7 @@
               class="img"
               src="./მზაპროდუქტები/მარინადი.jpg"
               alt="მწნილი"
-            />
+            >
             <div class="title_price">
               <h2 class="dedaena title">მწნილის ასორტი</h2>
               <p class="price">1.50ლ</p>
