--- a/first.html
+++ b/first.html
@@ -1,28 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="reset.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <link rel="stylesheet" href="reset.css" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="სახლური საცხობი">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Tamari Popkhadze">
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
-    />
-    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
-    <link rel="stylesheet" href="styles.css" />
+    >
+    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" >
+    <link rel="stylesheet" href="styles.css" >
+    <link rel = "icon" href = "images/icon.png" 
+            type = "image/house-icon">
     <title>სახლური</title>
   </head>
   <body>
@@ -30,7 +35,7 @@
       <div class="header-container">
         <div class="home_icon">
           <div class="name-div">
-            <img class="house-icon" src="./images/home.png" alt="house" />
+            <img class="house-icon" src="./images/home.png" alt="house" >
             <i class="fa-solid fa-heart heart"></i>
 
             <p class="name irubaqidze">სახლური</p>
