--- a/fourth.html
+++ b/fourth.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="stylesheet" href="reset.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="სახლური საცხობი">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="Tamari Popkhadze">
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
@@ -23,6 +26,8 @@
     />
     <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
     <link rel="stylesheet" href="styles4.css" />
+    <link rel = "icon" href = "images/icon.png" 
+    type = "image/house-icon">
     <title>სახლური/საკონდიტრო</title>
   </head>
 <body>
@@ -166,9 +171,6 @@
             </div>
             <div class="section3-childdiv">
                 <img class="section3-img" src="./საკონდიტრო/შეკვეთები/e5d548fe86eb2f5424f01bd0bd4201c2.jpg" alt="orders">
-            </div>
-            <div class="section3-childdiv">
-                <img class="section3-img" src="./საკონდიტრო/შეკვეთები/e83c803e92fdf002dc9299d5e5465dfd.jpg" alt="orders">
             </div>
             </div>
         </section>
