--- a/second.html
+++ b/second.html
@@ -1,35 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <link rel="stylesheet" href="reset.css" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8" >
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
+    <link rel="stylesheet" href="reset.css" >
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta name="description" content="სახლური საცხობი">
+    <meta name="keywords" content="HTML, CSS, JavaScriptგი">
+    <meta name="author" content="Tamari Popkhadze">
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
-    />
+    >
     <link
       rel="stylesheet"
       href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
-    />
-    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
-    <link rel="stylesheet" href="styles2.css" />
+    >
+    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" >
+    <link rel="stylesheet" href="styles2.css" >
+    <link rel = "icon" href = "images/icon.png" 
+            type = "image/house-icon">
     <title>სახლური/ცომეული</title>
   </head>
   <body>
     <header>
       <div class="home_icon">
         <div class="name-div">
-          <img class="house-icon" src="./images/home.png" alt="house" />
+          <img class="house-icon" src="./images/home.png" alt="house" >
           <i class="fa-solid fa-heart heart"></i>
           <p class="name irubaqidze">სახლური</p>
         </div>
@@ -51,7 +56,7 @@
             class="img"
             src="./ცომეული/06c5f0bb6b6ae072a27048ec5416b981.jpg"
             alt="ხაჭაპური"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">ხაჭაპური</h2>
             <p class="price">4.00ლ</p>
@@ -62,7 +67,7 @@
             class="img"
             src="./ცომეული/337530919_2373005786210056_2214351220954184061_n.jpg"
             alt="სოკოს ღვეზელი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">სოკოს ღვეზელი</h2>
             <p class="price">2.00ლ</p>
@@ -73,7 +78,7 @@
             class="img"
             src="./ცომეული/4cd0533a6c1daae88878b13b2461c49c.jpg"
             alt="ხორციანი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">ხორციანი ღვეზელი</h2>
             <p class="price">2.00ლ</p>
@@ -84,7 +89,7 @@
             class="img"
             src="./ცომეული/a785940114e6b7047bd5700b3b9a2d4b.jpg"
             alt="კუბდარი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">კუბდარი</h2>
             <p class="price">4.00ლ</p>
@@ -95,7 +100,7 @@
             class="img"
             src="./ცომეული/b5b23287a249b5d1bc60e343d7ba3a5a.jpg"
             alt="ლობიანი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">ლობიანი</h2>
             <p class="price">1.50ლ</p>
@@ -106,7 +111,7 @@
             class="img"
             src="./ცომეული/კარტოფილიანი.jpg"
             alt="კარტოფილიანი"
-          />
+          >
           <div class="title_price">
             <h2 class="dedaena title">კარტოფილიანი ღვეზელი</h2>
             <p class="price">1.50ლ</p>
