add facebook meta tags

--- a/second.html
+++ b/second.html
@@ -8,6 +8,12 @@
     <meta name="description" content="სახლური საცხობი">
     <meta name="keywords" content="HTML, CSS, JavaScriptგი">
     <meta name="author" content="Tamari Popkhadze">
+
+    <meta property="og:url"                content="https://tamaripopkhadze.github.io/finalProjectOfHtmlCss/" />
+    <meta property="og:type"               content="website" />
+    <meta property="og:title"              content="საცხობი სახლური" />
+    <meta property="og:description"        content="საცხობის აღწერა" />
+    <meta property="og:image"              content="https://static.vecteezy.com/system/resources/previews/006/050/466/original/bakery-background-with-colorful-bread-illustration-free-vector.jpg" />
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
