--- a/comeuli.html
+++ b/comeuli.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <link rel="stylesheet" href="reset.css" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="reset.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="სახლური საცხობი">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Tamari Popkhadze">
@@ -16,24 +16,24 @@
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
-    >
-    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" >
-    <link rel="stylesheet" href="styles3.css" />
-    <link rel = "icon" href = "images/icon.png" 
+    />
+    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
+    <link rel="stylesheet" href="comeuli.css" />
+    <link rel = "icon" href = "images/home.png" 
             type = "image/house-icon">
-    <title>სახლური/მზაპროდუქტები</title>
+    <title>სახლური/ცომეული</title>
   </head>
   <body>
     <header>
@@ -47,10 +47,10 @@
       </div>
       <nav>
         <ul>
-          <li><a class="dedaena li_design " href="first.html">მთავარი</a></li>
-          <li><a class="dedaena li_design" href="fourth.html">საკონდიტრო</a></li>
-          <li><a class="dedaena li_design" href="second.html">ცომეული</a></li>
-          <li><a class="dedaena active" href="third.html">მზა პროდუქტი</a></li>
+          <li><a class="dedaena li_design " href="home.html">მთავარი</a></li>
+          <li><a class="dedaena li_design" href="sakonditro.html">საკონდიტრო</a></li>
+          <li><a class="dedaena active" href="comeuli.html">ცომეული</a></li>
+          <li><a class="dedaena li_design" href="mzaProducti.html">მზა პროდუქტი</a></li>
         </ul>
       </nav>
     </header>
@@ -59,109 +59,76 @@
         <div class="child">
           <img
             class="img"
-            src="./მზაპროდუქტები/2ebb97faf78d433c19ec2ff5481e7d4e.jpg"
-            alt="ისპანახი"
-          >
+            src="./ცომეული/06c5f0bb6b6ae072a27048ec5416b981.jpg"
+            alt="ხაჭაპური"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">ისპანახის სალათი</h2>
+            <h2 class="dedaena title">ხაჭაპური</h2>
             <p class="price">4.00ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./მზაპროდუქტები/axali_kartofili.jpg"
-            alt="კარტოფილი"
-          >
+            src="./ცომეული/337530919_2373005786210056_2214351220954184061_n.jpg"
+            alt="სოკოს ღვეზელი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">ახალი კარტოფილი</h2>
+            <h2 class="dedaena title">სოკოს ღვეზელი</h2>
             <p class="price">2.00ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./მზაპროდუქტები/ced161dac8753403eb3c202ea77f053b.jpg"
-            alt="ბადრიჯანი"
-          >
+            src="./ცომეული/4cd0533a6c1daae88878b13b2461c49c.jpg"
+            alt="ხორციანი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">ნიგვზიანი ბადრიჯანი</h2>
+            <h2 class="dedaena title">ხორციანი ღვეზელი</h2>
             <p class="price">2.00ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./მზაპროდუქტები/cfe658ddc3dc16117a7502386f19f2e1.jpg"
-            alt="კუჭმაჭი"
-          >
+            src="./ცომეული/a785940114e6b7047bd5700b3b9a2d4b.jpg"
+            alt="კუბდარი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">კუჭმაჭი</h2>
+            <h2 class="dedaena title">კუბდარი</h2>
             <p class="price">4.00ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./მზაპროდუქტები/georgian-salad.jpg"
-            alt="ფხალი"
-          >
+            src="./ცომეული/b5b23287a249b5d1bc60e343d7ba3a5a.jpg"
+            alt="ლობიანი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">წითელი ფხალი</h2>
+            <h2 class="dedaena title">ლობიანი</h2>
             <p class="price">1.50ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./მზაპროდუქტები/kuchmachi.jpg"
-            alt="ქათამი"
-          >
+            src="./ცომეული/კარტოფილიანი.jpg"
+            alt="კარტოფილიანი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">ქათამი ქონდარში</h2>
+            <h2 class="dedaena title">კარტოფილიანი ღვეზელი</h2>
             <p class="price">1.50ლ</p>
           </div>
         </div>
-        <div class="child">
-            <img
-              class="img"
-              src="./მზაპროდუქტები/olivie.jpg"
-              alt="ოლივიე"
-            >
-            <div class="title_price">
-              <h2 class="dedaena title">ოლივიე</h2>
-              <p class="price">1.50ლ</p>
-            </div>
-          </div>
-          <div class="child">
-            <img
-              class="img"
-              src="./მზაპროდუქტები/qatmis-salata-kitrit.jpg"
-              alt="სალათი"
-            >
-            <div class="title_price">
-              <h2 class="dedaena title">ქათმის სალათი</h2>
-              <p class="price">1.50ლ</p>
-            </div>
-          </div>
-          <div class="child">
-            <img
-              class="img"
-              src="./მზაპროდუქტები/მარინადი.jpg"
-              alt="მწნილი"
-            >
-            <div class="title_price">
-              <h2 class="dedaena title">მწნილის ასორტი</h2>
-              <p class="price">1.50ლ</p>
-            </div>
-          </div>
       </div>
     </main>
     <footer>
       <div class="information-div">
         <i
           class="fa-solid fa-circle-info fa-2xl"
-          style="color: rgb(196, 226, 111)"
+          style="color: rgb(243, 206, 137)"
         ></i>
         <p class="information dedaena">საკონტაქტო ინფორმაცია</p>
       </div>
@@ -204,5 +171,5 @@
         </div>
       </div>
     </footer>
-    <script src="./script2.js"></script>
+    <script src="./script.js"></script>
   </body>
