--- a/home.html
+++ b/home.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <link rel="stylesheet" href="reset.css" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="reset.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="სახლური საცხობი">
     <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Tamari Popkhadze">
@@ -16,22 +16,22 @@
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
-    >
-    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" >
-    <link rel="stylesheet" href="styles.css" >
-    <link rel = "icon" href = "images/icon.png" 
+    />
+    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
+    <link rel="stylesheet" href="./home.css" />
+    <link rel = "icon" href = "./images/home.png" 
             type = "image/house-icon">
     <title>სახლური</title>
   </head>
@@ -40,7 +40,7 @@
       <div class="header-container">
         <div class="home_icon">
           <div class="name-div">
-            <img class="house-icon" src="./images/home.png" alt="house" >
+            <img class="house-icon" src="./images/home.png" alt="house" />
             <i class="fa-solid fa-heart heart"></i>
 
             <p class="name irubaqidze">სახლური</p>
@@ -50,10 +50,10 @@
         </div>
         <nav>
           <ul>
-            <li><a class="dedaena active" href="first.html">მთავარი</a></li>
-            <li><a class="dedaena li_design" href="fourth.html">საკონდიტრო</a></li>
-            <li><a class="dedaena li_design" href="second.html">ცომეული</a></li>
-            <li><a class="dedaena li_design" href="third.html">მზა პროდუქტი</a></li>
+            <li><a class="dedaena active" href="home.html">მთავარი</a></li>
+            <li><a class="dedaena li_design" href="sakonditro.html">საკონდიტრო</a></li>
+            <li><a class="dedaena li_design" href="comeuli.html">ცომეული</a></li>
+            <li><a class="dedaena li_design" href="mzaProducti.html">მზა პროდუქტი</a></li>
           </ul>
         </nav>
       </div>
