--- a/sakonditro.html
+++ b/sakonditro.html
@@ -30,9 +30,9 @@
       href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
     />
     <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
-    <link rel="stylesheet" href="styles4.css" />
-    <link rel = "icon" href = "images/icon.png" 
-    type = "image/house-icon">
+    <link rel="stylesheet" href="sakonditro.css" />
+    <link rel = "icon" href = "./images/home.png" 
+            type = "image/house-icon">
     <title>სახლური/საკონდიტრო</title>
   </head>
 <body>
@@ -45,6 +45,14 @@
             </div>
             <i class="Menu fa-solid fa-bars fa-xl" style="color: #d279c2;"></i>
           </div>
+          <nav>
+            <ul>
+              <li><a class="dedaena li_design " href="home.html">მთავარი</a></li>
+              <li><a class="dedaena active " href="sakonditro.html">საკონდიტრო</a></li>
+              <li><a class="dedaena li_design" href="comeuli.html">ცომეული</a></li>
+              <li><a class="dedaena li_design" href="mzaProducti.html">მზა პროდუქტი</a></li>
+            </ul>
+          </nav>
     </header>
     <main>
         <section class="section1">
@@ -108,9 +116,7 @@
             <div class="section2-childdiv">
                 <img class="section2-img" src="./საკონდიტრო/მინიატურული ტორტები/dc477cd64bcc29d768375640ec50505d.jpg" alt="">
             </div>
-            <div class="section2-childdiv">
-                <img class="section2-img" src="./საკონდიტრო/მინიატურული ტორტები/343ea9ff13ba3c3a3ea32ec2c6f035a5.jpg" alt="">
-            </div>
+            
             </div>
         </section>
         <section class="section3">
@@ -177,6 +183,7 @@
             <div class="section3-childdiv">
                 <img class="section3-img" src="./საკონდიტრო/შეკვეთები/e5d548fe86eb2f5424f01bd0bd4201c2.jpg" alt="orders">
             </div>
+            
             </div>
         </section>
         <footer>
@@ -227,5 +234,6 @@
             </div>
           </footer>
     </main>
+    <script src="./script.js"></script>
 </body>
 </html>
