--- a/mzaProducti.html
+++ b/mzaProducti.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" >
-    <link rel="stylesheet" href="reset.css" >
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <link rel="stylesheet" href="reset.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="სახლური საცხობი">
-    <meta name="keywords" content="HTML, CSS, JavaScriptგი">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
     <meta name="author" content="Tamari Popkhadze">
-
     <meta property="og:url"                content="https://tamaripopkhadze.github.io/finalProjectOfHtmlCss/" />
     <meta property="og:type"               content="website" />
     <meta property="og:title"              content="საცხობი სახლური" />
@@ -17,30 +16,30 @@
     <link
       rel="stylesheet"
       href="node_modules/arial-geo/css/arial-geo.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="node_modules/bpg-dedaena-nonblock/css/bpg-dedaena-nonblock.min.css"
-    >
+    />
     <link
       rel="stylesheet"
       href="node_modules/bpg-irubaqidze/css/bpg-irubaqidze.min.css"
-    >
-    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" >
-    <link rel="stylesheet" href="styles2.css" >
-    <link rel = "icon" href = "images/icon.png" 
+    />
+    <link rel="stylesheet" href="node_modules/alk-life/css/alk-life.min.css" />
+    <link rel="stylesheet" href="mzaProducti.css" />
+    <link rel = "icon" href = "./images/home.png" 
             type = "image/house-icon">
-    <title>სახლური/ცომეული</title>
+    <title>სახლური/მზაპროდუქტები</title>
   </head>
   <body>
     <header>
       <div class="home_icon">
         <div class="name-div">
-          <img class="house-icon" src="./images/home.png" alt="house" >
+          <img class="house-icon" src="./images/home.png" alt="house" />
           <i class="fa-solid fa-heart heart"></i>
           <p class="name irubaqidze">სახლური</p>
         </div>
@@ -48,10 +47,10 @@
       </div>
       <nav>
         <ul>
-          <li><a class="dedaena li_design " href="first.html">მთავარი</a></li>
-          <li><a class="dedaena li_design" href="fourth.html">საკონდიტრო</a></li>
-          <li><a class="dedaena active" href="second.html">ცომეული</a></li>
-          <li><a class="dedaena li_design" href="third.html">მზა პროდუქტი</a></li>
+          <li><a class="dedaena li_design " href="home.html">მთავარი</a></li>
+          <li><a class="dedaena li_design" href="sakonditro.html">საკონდიტრო</a></li>
+          <li><a class="dedaena li_design" href="comeuli.html">ცომეული</a></li>
+          <li><a class="dedaena active" href="mzaProducti.html">მზა პროდუქტი</a></li>
         </ul>
       </nav>
     </header>
@@ -60,76 +59,109 @@
         <div class="child">
           <img
             class="img"
-            src="./ცომეული/06c5f0bb6b6ae072a27048ec5416b981.jpg"
-            alt="ხაჭაპური"
-          >
+            src="./მზაპროდუქტები/2ebb97faf78d433c19ec2ff5481e7d4e.jpg"
+            alt="ისპანახი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">ხაჭაპური</h2>
+            <h2 class="dedaena title">ისპანახის სალათი</h2>
             <p class="price">4.00ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./ცომეული/337530919_2373005786210056_2214351220954184061_n.jpg"
-            alt="სოკოს ღვეზელი"
-          >
+            src="./მზაპროდუქტები/axali_kartofili.jpg"
+            alt="კარტოფილი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">სოკოს ღვეზელი</h2>
+            <h2 class="dedaena title">ახალი კარტოფილი</h2>
             <p class="price">2.00ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./ცომეული/4cd0533a6c1daae88878b13b2461c49c.jpg"
-            alt="ხორციანი"
-          >
+            src="./მზაპროდუქტები/ced161dac8753403eb3c202ea77f053b.jpg"
+            alt="ბადრიჯანი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">ხორციანი ღვეზელი</h2>
+            <h2 class="dedaena title">ნიგვზიანი ბადრიჯანი</h2>
             <p class="price">2.00ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./ცომეული/a785940114e6b7047bd5700b3b9a2d4b.jpg"
-            alt="კუბდარი"
-          >
+            src="./მზაპროდუქტები/cfe658ddc3dc16117a7502386f19f2e1.jpg"
+            alt="კუჭმაჭი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">კუბდარი</h2>
+            <h2 class="dedaena title">კუჭმაჭი</h2>
             <p class="price">4.00ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./ცომეული/b5b23287a249b5d1bc60e343d7ba3a5a.jpg"
-            alt="ლობიანი"
-          >
+            src="./მზაპროდუქტები/georgian-salad.jpg"
+            alt="ფხალი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">ლობიანი</h2>
+            <h2 class="dedaena title">წითელი ფხალი</h2>
             <p class="price">1.50ლ</p>
           </div>
         </div>
         <div class="child">
           <img
             class="img"
-            src="./ცომეული/კარტოფილიანი.jpg"
-            alt="კარტოფილიანი"
-          >
+            src="./მზაპროდუქტები/kuchmachi.jpg"
+            alt="ქათამი"
+          />
           <div class="title_price">
-            <h2 class="dedaena title">კარტოფილიანი ღვეზელი</h2>
+            <h2 class="dedaena title">ქათამი ქონდარში</h2>
             <p class="price">1.50ლ</p>
           </div>
         </div>
+        <div class="child">
+            <img
+              class="img"
+              src="./მზაპროდუქტები/olivie.jpg"
+              alt="ოლივიე"
+            />
+            <div class="title_price">
+              <h2 class="dedaena title">ოლივიე</h2>
+              <p class="price">1.50ლ</p>
+            </div>
+          </div>
+          <div class="child">
+            <img
+              class="img"
+              src="./მზაპროდუქტები/qatmis-salata-kitrit.jpg"
+              alt="სალათი"
+            />
+            <div class="title_price">
+              <h2 class="dedaena title">ქათმის სალათი</h2>
+              <p class="price">1.50ლ</p>
+            </div>
+          </div>
+          <div class="child">
+            <img
+              class="img"
+              src="./მზაპროდუქტები/მარინადი.jpg"
+              alt="მწნილი"
+            />
+            <div class="title_price">
+              <h2 class="dedaena title">მწნილის ასორტი</h2>
+              <p class="price">1.50ლ</p>
+            </div>
+          </div>
       </div>
     </main>
     <footer>
       <div class="information-div">
         <i
           class="fa-solid fa-circle-info fa-2xl"
-          style="color: rgb(243, 206, 137)"
+          style="color: rgb(196, 226, 111)"
         ></i>
         <p class="information dedaena">საკონტაქტო ინფორმაცია</p>
       </div>
@@ -172,5 +204,5 @@
         </div>
       </div>
     </footer>
-    <script src="./script2.js"></script>
+    <script src="./script.js"></script>
   </body>
